<resources>
    <string name="app_name">LappitChat</string>
    <string name="need_a_new_activity">NEED A NEW ACCOUNT ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="display_name">Display Name</string>
    <string name="hi_there_i_am_using_lapit_chat_app">Hi there, I am using Lapit Chat App</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LOGIN</string>
    <string name="pass">pass</string>
    <string name="email">Email</string>

    <string name="user_default_status">User default Status</string>
</resources>
