<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <include
        android:id="@+id/LoginToolBar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <EditText

        android:id="@+id/logPassword"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="222dp"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/logEmail"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="162dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/logLoginBtn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="240dp"
        android:layout_marginTop="292dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="318dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="216sp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="96dp"
        android:text="@string/login_to_your_account"

        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>